--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Bajrang Sharma - Modern Portfolio</title>
   <style>
     :root {
-      --primary-color: #00d4ff;
-      --secondary-color: #0078d7;
-      --accent-color: #00ffff;
-      --dark-bg: #0a0a0a;
-      --glass-bg: rgba(255, 255, 255, 0.1);
-      --glass-border: rgba(255, 255, 255, 0.2);
+      --primary-color: #7ef0f8;
+      --secondary-color: #0821ff;
+      --accent-color: #e968fa;
+      --dark-bg: #000000;
+      --glass-bg: rgba(0, 0, 0, 0.301);
+      --glass-border: rgba(177, 177, 177, 0.2);
       --text-light: #ffffff;
-      --text-muted: #b0b0b0;
+      --text-muted: #ffffff;
     }
 
     * {
@@ -24,7 +24,7 @@
 
     body {
       font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #0a0a0a 0%, #1a1a2e 50%, #16213e 100%);
+      background: linear-gradient(135deg, #000000 0%, #000000 50%, #000000 100%);
       color: var(--text-light);
       overflow-x: hidden;
       scroll-behavior: smooth;
@@ -39,7 +39,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(135deg, #000000 0%, #1a1a2e 100%);
+      background: linear-gradient(135deg, #000000 0%, #000000 100%);
       color: white;
       display: flex;
       flex-direction: column;
@@ -53,10 +53,10 @@
     #loading img {
       width: 200px;
       height: auto;
-      margin-bottom: 20px;
-      animation: logoFloat 2s ease-in-out infinite;
-      border-radius: 20px;
-      box-shadow: 0 0 30px rgba(0, 212, 255, 0.5);
+      margin-bottom: 30px;
+      animation: logoFloat 0.5s ease-in-out infinite;
+      border-radius: 30px;
+      box-shadow: 0 0 60px rgb(255, 255, 255);
     }
 
     @keyframes logoFloat {
@@ -98,7 +98,7 @@
       top: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(0, 0, 0, 0);
       backdrop-filter: blur(20px);
       border: 1px solid var(--glass-border);
       border-radius: 50px;
@@ -959,3 +959,4 @@
   </script>
 </body>
 </html>
+
